--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "todo-list",
   "version": "1.0.0",
-  "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,12 +9,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "webpack": "^5.73.0",
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "devDependencies": {
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1"
-  }
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tcoquery/to-do-list.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tcoquery/to-do-list/issues"
+  },
+  "homepage": "https://github.com/tcoquery/to-do-list#readme",
+  "description": ""
 }
